# stepsel

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat  requirements.txt
src/stepsel/: __init__.py  datasets.py
src/stepsel/binning/: __init__.py  helper.py  optimal.py
src/stepsel/data/: dummy_data.parquet  scoring_table.csv  scoring_table_invalid.csv  soccer.parquet
src/stepsel/modeling/: __init__.py  stepwise_glm.py
src/stepsel/modeling/predict/: __init__.py  scoring_table.py
src/stepsel/modeling/prep/: __init__.py  helper.py  interaction.py  model_matrix.py
src/stepsel/stattests/: __init__.py  likelihood_ratio_test.py
src/stepsel/tools/: __init__.py  group_over_columns.py
tests/: test_stepsel.py
tests/test_binning/: test_helper.py  test_optimal.py
tests/test_modeling/: test_stepwise_glm.py
tests/test_modeling/test_predict/: test_scoring_table.py
tests/test_modeling/test_prep/: test_helper2.py  test_interaction.py  test_model_matrix.py
tests/test_stattests/: test_likelihood_ratio_test.py
tests/test_tools/: test_group_over_columns.py
