[tool.poetry]
name = "stepsel"
version = "0.1.0"
description = "Stepwise selection for statsmodels GLM."
authors = ["Jakub Cerny"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
