[tool.poetry]
name = "stepsel"
version = "0.1.0"
description = "Stepwise selection for statsmodels GLM."
authors = ["Jakub Cerny"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12"
numpy = ">=2.0.0"
scikit-learn = ">=1.5.1"
matplotlib = ">=3.9.1"
pandas = ">=2.2.2"
statsmodels = ">=0.14.2"
pyarrow = "^16.1.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
